--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Frontend Mentor | E-commerce product page solution by Kawsar Ahmed Fahad (faha1999) build with reactjs & scss"
+      content="Frontend Mentor | E-commerce product page solution build with reactjs & scss"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>Frontend Mentor | E-commerce product page solution by Kawsar Ahmed Fahad (faha1999) build with reactjs & scss</title>
+    <title>Frontend Mentor | E-commerce product page build with reactjs & scss</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
